@@ -498,7 +498,11 @@ class STAT_BackEnd
             \param type - the struct type
             \return the vector of the struct's components on success
         */
+#if DYNINST_MAJOR_VERSION >= 10
+        tbb::concurrent_vector<Dyninst::SymtabAPI::Field *> *getComponents(Dyninst::SymtabAPI::Type *type);
+#else
         std::vector<Dyninst::SymtabAPI::Field *> *getComponents(Dyninst::SymtabAPI::Type *type);
+#endif
 
         //! Get Python script level frame info
         /*!
